# fake-news-detection-backend

./: data.json  pyproject.toml  requirements.txt
Django/: celery.py  schema.py  settings.py  urls.py
src/apps/fake/: document.py  models.py  schema.py  urls.py  views.py
src/apps/fake/migrations/: 0001_initial.py  0002_auto_20210507_1911.py
src/apps/news/: apps.py  models.py
src/apps/news/migrations/: 0001_initial.py
src/apps/scraping_news/: admin.py  apps.py  documents.py  models.py  news_model.ipynb  news_model.sav  nlp.py  schema.py  tasks.py  urls.py  vectorizer.pickle
src/apps/scraping_news/.ipynb_checkpoints/: news_model-checkpoint.ipynb
src/apps/scraping_news/migrations/: 0001_initial.py
src/apps/user/: urls.py
src/apps/user/Models/: __init__.py  comment.py  like.py  post.py  profile.py  user.py
src/apps/user/migrations/: 0001_initial.py
src/apps/user/views/: __init__.py  hallo.py  user.py
