[tool.poetry]
name = "news"
version = "1.0.0"
description = ""
authors = ["redXX"]

[tool.poetry.dependencies]
python = "^3.6"
djangorestframework = "^3.12.4"
djongo = "^1.3.4"
Django = "3.0.5"
django-cors-headers = "^3.7.0"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
